2022-09-19 version 2.1.1

	* fix: double free() segmentation fault with BASE clang 14.0.5

2022-01-02 version 2.1

	* add: opt -z to toggle numeric value

2021-03-02 version 2.0

	* change: sysctl library sysctlmibinfo -> sysctlmibinfo2
	* delete: undocumented interface (kern/kern_sysctl.c) support
	* delete: sysctlinfo_helpers.h/c, use sysctlinfo via sysctlmibinfo2
	* improve: manual DESCRIPTION
	* add: libnv(9) Format
	* add: opt -k, print SKIP with -a
	* add: opt -H, print object handler "Defined/Undefined"
	* add: opaque S,pagesizes for hw.pagesizes
	* change: opt -pg [FLAGS] -> [FLAGS-RAW]
	* change: opt -g with xml <flags> -> <flags-raw>
	* change: opt -pG [TRUE-FLAGS] -> [FLAGS]
	* change: opt -G with xml <flags-true> -> <flags>
	* change: opt -m -> -S
	* fix: opt -S only with -a
	* change: opt -y -> -O
	* change: opt -pO [ID] -> [OID]
	* change: opt -O xml
		<id> <level1>X</level1> <level2>Y</level2> </id> ->
		<OID>X.Y</OID>
	* change: opt -e <sep> -> -s <sep>
	* add: opt -e, like sysctl
	* change: opt -pF [FORMAT-STRING] -> [FORMAT]
	* change: opt -v show value -> show version
	* change: show value by default like sysctl
	* change: opt -V with -a, show object with/without a value
	* add: opt -n hide name, like sysctl
	* change: -N show name -> hide value
	* change: show name by default like sysctl
	* delete: -A, in compatibility like sysctl
	* delete: -X, in compatibility like sysctl
 	* change: opt -D = -dFGHlOt

2019-10-5 version 1.2.1

	* delete: CTL_SYSCTLMIB, CTL_STSCTL is in sys/sysctl.h
	* fix: man SYNOPSIS and usage() like style(9)

2019-9-14 version 1.2

	* add: 'sysctlinfo' kernel interface support:
	*    add: use sysctlinfo.ko if loaded else use the kernel interface
	*    add: xo_errx if OID > CTL_MAXNAME - 2 and sysctlinfo is not loaded
	*    fix: show nodes up to CTL_MAXNAME levels
	*    fix: show the right value of the nodes without the last name
                  (e.g., "security.jail.param.allow.mount.")